--- a/SQL_Injection/sign_in.html
+++ b/SQL_Injection/sign_in.html
@@ -1,11 +1,17 @@
 
 <!DOCTYPE html>
 <html>
+ <link rel = "stylesheet"
+   type = "text/css"
+   href = "style.css" />
 <body>
-<p>SHADY BANK<p>
+<h1>
+<img src="JoS._A._Bank_Clothiers_Logo.jpg">
+</h1>
+
 <form action="action_page.php">
   SSN: 
-  <input type="text" name="ssn" value="">
+  <input type="text" name="ssn" value="XXX-XX-XXXX">
   <br>
  Password: 
   <input type="text" name="password" value="">
@@ -14,3 +20,4 @@
 </form> 
 </body>
 </html>
+
