--- a/SQL_Injection/sign_in.html
+++ b/SQL_Injection/sign_in.html
@@ -1,23 +1,17 @@
-
 <!DOCTYPE html>
 <html>
- <link rel = "stylesheet"
-   type = "text/css"
-   href = "style.css" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 <body>
-<h1>
+    <h1>
 <img src="JoS._A._Bank_Clothiers_Logo.jpg">
-</h1>
-
-<form action="action_page.php">
-  SSN: 
-  <input type="text" name="ssn" value="XXX-XX-XXXX">
-  <br>
- Password: 
-  <input type="text" name="password" value="">
-  <br>
-  <input type="submit" value="Submit">
-</form> 
+    </h1>
+    <form action="action_page.php"> SSN:
+        <input type="text" name="ssn" value="XXX-XX-XXXX">
+        <br> Password:
+        <input type="text" name="password" value="">
+        <br>
+        <input type="submit" value="Submit"> 
+    </form>
 </body>
-</html>
 
+</html>
